--- a/css/accueil/_pc_accueil.scss
+++ b/css/accueil/_pc_accueil.scss
@@ -3,19 +3,12 @@
     padding: 0;
 }
 
-#header{
-    display: grid;
-    grid-template-rows: 100vh;
-
-    #imageAccueil{
-        display: grid;
-        grid-template-rows: 50% 5vh;
-
-        img{
-            width: 100%;
-            height: 100%;
-            border-radius: 0 0 20px 20px;
-        }
+header{
+    background-image: url("../images/image_accueil.jpg");
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 730px;
 
         #titre{
             font-family: "MavenBold";
@@ -26,7 +19,7 @@
             color:white;
         }
     }
-}
+
 #contenu{
     display: grid;
     grid-template-rows: 5vh 20vh 5vh 20vh 90vh 20vh;
@@ -419,7 +412,7 @@ footer{
     nav ul {
        display: flex;
        justify-content: flex-end;
-    line-height: 100px;
+        line-height: 100px;
         list-style: none;
         position: relative;
         margin-right: 10%;
@@ -598,12 +591,6 @@ footer{
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
-    }
-
-    header {
-        font-size: 35px;
-        font-weight: 600;
-        padding: 10px 0;
     }
 
     p {
