--- a/css/actualites/main_actualites.css
+++ b/css/actualites/main_actualites.css
@@ -1,1 +1,111 @@
-/* No CSS *//*# sourceMappingURL=main_actualites.css.map */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+#header_actualites {
+  background-image: url("../images/image_actualites.jpg");
+  background-size: cover;
+  height: 870px;
+  width: 100%;
+}
+
+#header_actualites #titre {
+  font-family: "MavenBold";
+  font-size: 6rem;
+  margin-left: 35%;
+  margin-top: 23%;
+  position: absolute;
+  color: white;
+}
+
+#contenu_actualites {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 5fr 60fr 2fr 20fr 5fr;
+      grid-template-columns: 5fr 60fr 2fr 20fr 5fr;
+  -ms-grid-rows: 100vh 100vh;
+      grid-template-rows: 100vh 100vh;
+}
+
+#contenu_actualites #les_actualites {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-columns: 70fr;
+      grid-template-columns: 70fr;
+  -ms-grid-rows: 5vh 20vh 5vh 70vh;
+      grid-template-rows: 5vh 20vh 5vh 70vh;
+}
+
+#contenu_actualites #les_actualites #titreactualite {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  -ms-grid-column: 1;
+  grid-column: 1;
+  font-family: "MavenBold";
+  font-size: 40px;
+  color: var(--bleu);
+}
+
+#contenu_actualites #les_actualites #article_actualite {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 10vh 60vh;
+      grid-template-rows: 10vh 60vh;
+  -ms-grid-columns: 5fr 50fr 5fr;
+      grid-template-columns: 5fr 50fr 5fr;
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 4;
+  grid-row: 4;
+}
+
+#contenu_actualites #les_actualites #article_actualite #datearticle_actualite {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  -ms-grid-column: 2;
+  grid-column: 2;
+}
+
+#contenu_actualites #les_actualites #article_actualite #datearticle_actualite p {
+  font-family: "MavenBold";
+  font-size: 20px;
+}
+
+#contenu_actualites #les_actualites #article_actualite #contenuarticle_actualites {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  -ms-grid-columns: 40% 5fr;
+      grid-template-columns: 40% 5fr;
+  -ms-grid-rows: 40% 5fr;
+      grid-template-rows: 40% 5fr;
+  border: solid 1px black;
+  border-radius: 0 40px 40px 40px;
+  -webkit-box-shadow: 3px 3px 12px #555;
+          box-shadow: 3px 3px 12px #555;
+}
+
+#contenu_actualites #les_actualites #article_actualite #contenuarticle_actualites #imgarticle {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  -ms-grid-column: 1;
+  grid-column: 1;
+}
+
+#contenu_actualites #les_actualites #article_actualite #contenuarticle_actualites p {
+  font-size: 15px;
+  font-family: "MavenRegular";
+}
+/*# sourceMappingURL=main_actualites.css.map */
