--- a/css/profil/main_profil.scss
+++ b/css/profil/main_profil.scss
@@ -1,3 +1,4 @@
-@import 'mobile_profil';
+@import '_mobile_profil';
 @import '_pc_profil';
-@import 'tablette_profil';
+@import '_tablette_profil';
+@import '_pc_modifierprofil';
