--- a/css/profil/_pc_profil.scss
+++ b/css/profil/_pc_profil.scss
@@ -1,6 +1,101 @@
 #contenu_profil{
     display: grid;
-    grid-template-rows: 46vh 42vh;
+    grid-template-rows: 47vh 44vh 50vh;
+
+    
+    #contenuInfos_Profil{
+        display: grid;
+        grid-template-columns: 1fr 5% 1% 10fr 15fr 5% 1% 10fr 1fr;
+        grid-template-rows: 1vh 10vh 32vh;
+        grid-row: 2;
+        background-color: var(--bleufonce);
+
+        .fab, .fas {
+            border-radius: 50%;
+            background-color: var(--jauneclair);
+            width: 60px;
+            height: 60px;
+            margin: auto;
+        }
+
+        .fa-fort-awesome, .fa-info-circle, .fa-swimmer{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 35px;
+            color: black;
+        }
+
+        #logo1{
+            display: grid;
+            grid-row: 2;
+            grid-column: 2;
+        }
+
+        #titre_typeParc{
+            display: grid;
+            grid-column: 4;
+            grid-row: 2;
+            font-family: "MavenRegular";
+            font-size: 25px;
+            color: white;
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        #infos_typeParc{
+            display: grid;
+            grid-column: 4;
+            grid-row: 3;
+            color: white;
+            font-family: "MavenRegular";
+            font-size: 20px;
+        }
+
+        #logo2{
+            display: grid;
+            grid-row: 2;
+            grid-column: 5;
+        }
+
+        #infos_utilisateur{
+            display: grid;
+            grid-row: 3;
+            grid-column: 5;
+            color: white;
+            font-size: 20px;
+            text-align: center;
+            font-family: "MavenRegular";
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        #logo3{
+            display: grid;
+            grid-row: 2;
+            grid-column: 6;
+        }
+
+        #titre_loisirs{
+            display: grid;
+            grid-column: 8;
+            grid-row: 2;
+            font-family: "MavenRegular";
+            font-size: 25px;
+            color: white;
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        #infos_loisir{
+            display: grid;
+            grid-row: 3;
+            grid-column: 8;
+            font-family: "MavenRegular";
+            font-size: 20px;
+            color: white;
+        }
+    }
 
     #img_banniere{
         background-image: url("../images/banner.jpg");
@@ -8,7 +103,7 @@
         background-repeat: no-repeat;
         background-position: center;
         display: grid;
-        grid-template-rows: 32vh 6vh 8vh;
+        grid-template-rows: 35vh 5vh 8vh;
         grid-row: 1;
 
         #img_profil{
@@ -72,6 +167,7 @@
                     text-align: center;
                     color: white;
                     font-size: 22px;
+                    cursor: pointer;
                 }
             }
         }
