--- a/css/profil/main_profil.css
+++ b/css/profil/main_profil.css
@@ -337,10 +337,10 @@
 #contenu_modif2 {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 6vh 6vh 6vh 6vh 6vh 6vh 6vh;
-      grid-template-rows: 6vh 6vh 6vh 6vh 6vh 6vh 6vh;
-  -ms-grid-columns: 5% 1fr 5%;
-      grid-template-columns: 5% 1fr 5%;
+  -ms-grid-rows: 6vh 6vh 6vh 6vh 6vh 6vh 6vh 70vh 6vh 6vh 6vh 6vh 6vh 6vh 6vh 6vh 8vh 6vh 6vh 6vh;
+      grid-template-rows: 6vh 6vh 6vh 6vh 6vh 6vh 6vh 70vh 6vh 6vh 6vh 6vh 6vh 6vh 6vh 6vh 8vh 6vh 6vh 6vh;
+  -ms-grid-columns: 10% 1fr 10%;
+      grid-template-columns: 10% 1fr 10%;
 }
 
 #contenu_modif2 #texte_bio {
@@ -384,5 +384,84 @@
 
 #contenu_modif2 #adressemail_modif textarea {
   width: 20%;
+}
+
+#contenu_modif2 #datenaissance_modif {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 5;
+  grid-row: 5;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  text-align: right;
+}
+
+#contenu_modif2 #titre_mdp {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 9;
+  grid-row: 9;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  font-family: "MavenBold";
+  color: var(--bleufonce);
+  font-size: 40px;
+  text-align: center;
+}
+
+#contenu_modif2 #ancienmdp_modif {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 11;
+  grid-row: 11;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  text-align: center;
+}
+
+#contenu_modif2 #newmdp_modif {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 13;
+  grid-row: 13;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  text-align: center;
+}
+
+#contenu_modif2 #confirmnewnmdp_modif {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 15;
+  grid-row: 15;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  text-align: center;
+}
+
+#contenu_modif2 #deco_modif {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 17;
+  grid-row: 17;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  text-align: center;
+  font-family: "MavenBold";
+  color: var(--bleufonce);
+  font-size: 40px;
+}
+
+#contenu_modif2 #supprcompte_modif {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 19;
+  grid-row: 19;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  text-align: center;
+  font-family: "MavenBold";
+  color: var(--bleufonce);
+  font-size: 40px;
 }
 /*# sourceMappingURL=main_profil.css.map */
