--- a/css/accueil/_pc_accueil.scss
+++ b/css/accueil/_pc_accueil.scss
@@ -1,7 +1,3 @@
-@media (min-width:1240px)
-{
-    @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-
 
 *{
     margin: 0;
@@ -88,7 +84,7 @@
     }
 }
 
-#footer{
+footer{
     display: grid;
     grid-template-rows: 70vh 3vh 4vh;
     grid-template-columns: 1fr 25% 1fr 30% 1fr 30% 1fr;
@@ -594,5 +590,4 @@
         font-size: 30px;
         font-weight: 500;
     }
-}
 }
