--- a/css/accueil/_pc_accueil.scss
+++ b/css/accueil/_pc_accueil.scss
@@ -4,9 +4,451 @@
     padding: 0;
 }
 
+@media (min-width: 1281px) {
+    @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+    * {
+        margin: 0;
+        padding: 0;
+        user-select: none;
+        box-sizing: border-box;
+        font-family: 'MavenBold';
+    }
+
+  
+    
+    nav {
+        background: var(--black);
+    }
+
+    nav:after {
+        content: '';
+        clear: both;
+        display: table;
+    }
+
+    nav .logo img {
+        float: left;
+     width: 10%;
+     margin: 10px 0 10px 10%;
+    }
+
+    nav ul {
+       display: flex;
+       justify-content: flex-end;
+        line-height: 100px;
+        list-style: none;
+        position: relative;
+        margin-right: 10%;
+    }
+
+    nav ul li {
+       text-align: left;
+        display: inline-block;
+        background: var(--black);
+        margin: 0 5px;
+    }
+
+    nav ul li a {
+        color: var(--white);
+        line-height: 70px;
+        text-decoration: none;
+        font-size: 18px;
+        padding: 8px 50px;
+    }
+
+    nav ul li a:hover {
+        color: var(--bleuclair);
+        border-radius: 5px;
+        box-shadow: 0 0 5px var(--bleu),
+            0 0 10px var(--bleuclair);
+    }
+
+    nav ul ul li a:hover {
+        box-shadow: none;
+    }
+
+    nav ul ul {
+        position: absolute;
+        top: 120px;
+        border-top: 3px solid var(--bleuclair);
+        opacity: 0;
+        visibility: hidden;
+        transition: top .3s;
+    }
+
+    nav ul li:hover>ul {
+        top: 100px;
+        opacity: 1;
+        visibility: visible;
+    }
+
+    nav ul ul li {
+        position: relative;
+        margin: 0px;
+        width: auto;
+        float: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 1px solid var(--bleu);
+        text-align: center;
+    }
+
+    nav ul ul li a {
+        line-height: 50px;
+    }
+
+    nav ul ul ul li {
+        position: relative;
+        top: -60px;
+        left: 150px;
+    }
+
+    .show,
+    .icon,
+    input {
+        display: none;
+    }
+
+    .fa-plus {
+        font-size: 15px;
+        margin-left: 40px;
+    }
+
+    @media all and (max-width: 1280px) {
+        
+        nav .logo img {
+            width: 25%;
+            margin: 10px 0;
+        }
+
+        nav ul {
+            margin-right: 0px;
+            text-align: center;
+            width: 100% !important;
+        }
+
+        .show+a,
+        ul {
+            display: none;
+        }
+
+        nav ul li,
+        nav ul ul li {
+            display: block;
+            width: 100% !important;
+        }
+
+        nav ul li a:hover {
+            box-shadow: none;
+        }
+
+        .show {
+            width: 100%;
+            text-align: center;
+            color: white;
+            font-size: 18px;
+            padding: 0 20px;
+            line-height: 70px;
+            cursor: pointer;
+        }
+
+        .show:hover {
+            color: var(--bleuclair);
+        }
+
+        .icon {
+            display: block;
+            color: white;
+            position: absolute;
+            top: 0;
+            right: 40px;
+            line-height: 100px;
+            cursor: pointer;
+            font-size: 2em;
+        }
+
+        nav ul ul {
+            width: 100%;
+            top: 70px;
+            border-top: 0px;
+            float: none;
+            position: static;
+            display: none;
+            opacity: 1;
+            visibility: visible;
+            text-align: center;
+        }
+
+        nav ul ul a {
+            padding-left: 40px;
+        }
+
+        nav ul ul ul a {
+            padding-left: 80px;
+            
+        }
+
+        nav ul ul ul li {
+            position: static;
+        }
+
+        [id^=btn]:checked+ul {
+            display: block;
+        }
+
+        nav ul ul li {
+            border-bottom: 0px;
+        }
+
+        span.cancel:before {
+            content: '\f00d';
+        }
+    }
+
+    .content {
+        z-index: -1;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+
+    p {
+        font-size: 30px;
+        font-weight: 500;
+    }
+}
+@media (min-width:769px) and (max-width: 1240px)
+{
+    @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+    * {
+        margin: 0;
+        padding: 0;
+        user-select: none;
+        box-sizing: border-box;
+        font-family: 'MavenBold';
+    }
+
+    nav {
+        background: var(--black);
+    }
+
+    nav:after {
+        content: '';
+        clear: both;
+        display: table;
+    }
+
+    nav .logo {
+        display: flex;
+        justify-content: center;
+        color: white;
+    }
+
+    nav ul {
+        width: 100%;
+        text-align: center;
+        float: right;
+        margin-right: 40px;
+        list-style: none;
+        position: relative;
+    }
+
+    nav ul li {
+        background: var(--black);
+        margin: 0 5px;
+    }
+
+    nav ul li a {
+        color: var(--white);
+        line-height: 70px;
+        text-decoration: none;
+        font-size: 18px;
+        padding: 8px 15px;
+    }
+
+    nav ul li a:hover {
+        color: var(--bleuclair);
+        border-radius: 5px;
+        box-shadow: 0 0 5px var(--bleu),
+            0 0 10px var(--bleuclair);
+    }
+
+    nav ul ul li a:hover {
+        box-shadow: none;
+    }
+
+    nav ul ul {
+        position: absolute;
+        top: 90px;
+        border-top: 3px solid var(--bleuclair);
+        opacity: 0;
+        visibility: hidden;
+        transition: top .3s;
+    }
+
+    nav ul ul ul {
+        border-top: none;
+    }
+
+    nav ul li:hover>ul {
+        top: 70px;
+        opacity: 1;
+        visibility: visible;
+    }
+
+    nav ul ul li {
+        position: relative;
+        margin: 0px;
+        width: 150px;
+        float: none;
+        display: list-item;
+        border-bottom: 1px solid var(--black);
+    }
+
+    nav ul ul li a {
+        line-height: 50px;
+    }
+
+    nav ul ul ul li {
+        position: relative;
+        top: -60px;
+        left: 150px;
+    }
+
+    .show,
+    .icon,
+    input {
+        display: none;
+    }
+
+    .fa-plus {
+        font-size: 15px;
+        margin-left: 40px;
+    }
+}
+
+@media all and (max-width: 1280px)
+{
+    nav ul {
+        margin-right: 0px;
+        float: left;
+    }
+
+    nav .logo img {
+        width: 200px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        margin: 10px 0;
+    }
+
+    .show+a,
+    ul {
+        display: none;
+    }
+
+    nav ul li,
+    nav ul ul li {
+        display: block;
+        width: 100%;
+    }
+
+    nav ul li a:hover {
+        box-shadow: none;
+    }
+
+  
+        .fa-sort-down {
+            color: var(--jaunefonce);
+            font-size: 2em;
+            margin-left: 20px;
+        }
+
+    .show, .an {
+        display: block;
+        color: var(--bleuclair);
+        font-size: 18px;
+        padding: 0 20px;
+        line-height: 70px;
+        cursor: pointer;
+    }
+
+    .show:hover {
+        color: var(--bleuclair);
+    }
+
+    .icon {
+        display: block;
+        color: white;
+        position: absolute;
+        top: 0;
+        right: 40px;
+        line-height: 100px;
+        cursor: pointer;
+        font-size: 25px;
+    }
+
+    nav ul ul {
+        top: 70px;
+        border-top: 0px;
+        float: none;
+        position: static;
+        display: none;
+        opacity: 1;
+        visibility: visible;
+    }
+
+    nav ul ul a {
+        padding-left: 40px;
+    }
+
+    nav ul ul ul a {
+        padding-left: 80px;
+    }
+
+    nav ul ul ul li {
+        position: static;
+    }
+
+    [id^=btn]:checked+ul {
+        display: block;
+    }
+
+    [id^=btn]:checked .fa-sort-down {
+        display: none;
+    }
+
+    nav ul ul li {
+        border-bottom: 0px;
+    }
+
+    span.cancel:before {
+        content: '\f00d';
+    }
+}
+
+.content {
+    z-index: -1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+p {
+    font-size: 30px;
+    font-weight: 500;
+}
+
 #header_accueil{
     background-image: url("../images/image_accueil.jpg");
-    background-size: auto;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     height: 880px;
@@ -14,9 +456,6 @@
         #titre{
             font-family: "MavenBold";
             font-size: 6rem;
-            margin-left: 35%;
-            margin-top: 23%;
-            position: absolute;
             color:white;
         }
     }
@@ -213,6 +652,18 @@ footer{
             h3{
                 font-family: "MavenRegular";
             }
+
+            a:link{
+                text-decoration: none;
+                color: var(--jaune);
+            }
+            a:hover{
+                text-decoration: underline;
+            }
+
+            a:visited{
+                color: var(--jaune);
+            }
         }
 
         #page1{
@@ -331,6 +782,13 @@ footer{
             grid-column: 2;
         }
 
+        #infos_telTab{
+            display: none;
+        }
+
+        #infos_adresseTab{
+            display: none;
+        }
         #icon3{
             display: grid;
             grid-row: 5;
@@ -344,6 +802,15 @@ footer{
             font-weight: lighter;
             color: white;
             font-size: 15px;
+        }
+
+        a:link{
+            text-decoration: none;
+        }
+
+        a:hover{
+            text-decoration: underline;
+            color: var(--jaune);
         }
     }
     #mentionslegales{
@@ -370,224 +837,5 @@ footer{
         grid-column: 4;
         grid-row: 3;
         text-align: right;
-    }
-}
-
-
-
-@media (min-width: 1281px) {
-    @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-
-    * {
-        margin: 0;
-        padding: 0;
-        user-select: none;
-        box-sizing: border-box;
-        font-family: 'MavenBold';
-    }
-
-    nav {
-        background: var(--black);
-}
-
-    nav:after {
-        content: '';
-        clear: both;
-        display: table;
-    }
-
-    nav .logo img {
-        float: left;
-     width: 10%;
-     margin: 10px 0 10px 10%;
-    }
-
-    nav ul {
-       display: flex;
-       justify-content: flex-end;
-        line-height: 100px;
-        list-style: none;
-        position: relative;
-        margin-right: 10%;
-    }
-
-    nav ul li {
-       text-align: left;
-        display: inline-block;
-        background: var(--black);
-        margin: 0 5px;
-    }
-
-    nav ul li a {
-        color: var(--white);
-        line-height: 70px;
-        text-decoration: none;
-        font-size: 18px;
-        padding: 8px 50px;
-    }
-
-    nav ul li a:hover {
-        color: var(--bleuclair);
-        border-radius: 5px;
-        box-shadow: 0 0 5px var(--bleu),
-            0 0 10px var(--bleuclair);
-    }
-
-    nav ul ul li a:hover {
-        box-shadow: none;
-    }
-
-    nav ul ul {
-        position: absolute;
-        top: 120px;
-        border-top: 3px solid var(--bleuclair);
-        opacity: 0;
-        visibility: hidden;
-        transition: top .3s;
-    }
-
-    nav ul li:hover>ul {
-        top: 100px;
-        opacity: 1;
-        visibility: visible;
-    }
-
-    nav ul ul li {
-        position: relative;
-        margin: 0px;
-        width: auto;
-        float: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-bottom: 1px solid var(--bleu);
-        text-align: center;
-    }
-
-    nav ul ul li a {
-        line-height: 50px;
-    }
-
-    nav ul ul ul li {
-        position: relative;
-        top: -60px;
-        left: 150px;
-    }
-
-    .show,
-    .icon,
-    input {
-        display: none;
-    }
-
-    .fa-plus {
-        font-size: 15px;
-        margin-left: 40px;
-    }
-
-    @media all and (max-width: 1280px) {
-        
-
-        nav .logo img {
-            width: 25%;
-            margin: 10px 0;
-        }
-
-        nav ul {
-            margin-right: 0px;
-            text-align: center;
-            width: 100% !important;
-        }
-
-        .show+a,
-        ul {
-            display: none;
-        }
-
-        nav ul li,
-        nav ul ul li {
-            display: block;
-            width: 100% !important;
-        }
-
-        nav ul li a:hover {
-            box-shadow: none;
-        }
-
-        .show {
-            width: 100%;
-            text-align: center;
-            color: white;
-            font-size: 18px;
-            padding: 0 20px;
-            line-height: 70px;
-            cursor: pointer;
-        }
-
-        .show:hover {
-            color: var(--bleuclair);
-        }
-
-        .icon {
-            display: block;
-            color: white;
-            position: absolute;
-            top: 0;
-            right: 40px;
-            line-height: 100px;
-            cursor: pointer;
-            font-size: 2em;
-        }
-
-        nav ul ul {
-            width: 100%;
-            top: 70px;
-            border-top: 0px;
-            float: none;
-            position: static;
-            display: none;
-            opacity: 1;
-            visibility: visible;
-            text-align: center;
-        }
-
-        nav ul ul a {
-            padding-left: 40px;
-        }
-
-        nav ul ul ul a {
-            padding-left: 80px;
-            
-        }
-
-        nav ul ul ul li {
-            position: static;
-        }
-
-        [id^=btn]:checked+ul {
-            display: block;
-        }
-
-        nav ul ul li {
-            border-bottom: 0px;
-        }
-
-        span.cancel:before {
-            content: '\f00d';
-        }
-    }
-
-    .content {
-        z-index: -1;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
-
-    p {
-        font-size: 30px;
-        font-weight: 500;
     }
 }
