--- a/css/profil/_pc_profil.scss
+++ b/css/profil/_pc_profil.scss
@@ -99,7 +99,7 @@
 
     #img_banniere{
         background-image: url("../images/banner.jpg");
-        background-size: 1720px 400px;
+        background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         display: grid;
@@ -114,7 +114,7 @@
             width: 215px;
             border-radius: 50%;
             background-image: url("../images/Baptiste.jpg");
-            background-size: 220px 220px;
+            background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
         }
